--- a/apps/app-coffee/package.json
+++ b/apps/app-coffee/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-preset-vue",
+  "name": "app-coffee",
   "version": "0.0.0",
   "scripts": {
     "dev:app": "uni -p app",
@@ -67,6 +67,8 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4000720240327002",
     "@vue/runtime-core": "^3.3.11",
     "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.1",
     "typescript": "^4.9.4",
     "vite": "4.3.5",
     "vue-tsc": "^1.0.24"
