--- a/apps/app-coffee/package.json
+++ b/apps/app-coffee/package.json
@@ -58,7 +58,9 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-4000720240327002",
     "@packages/http": "workspace:*",
     "@vant/weapp": "^1.11.5",
+    "crypto-js": "^4.2.0",
     "luch-request": "^3.1.1",
+    "pinia": "^2.0.28",
     "vue": "^3.3.11",
     "vue-i18n": "^9.1.9"
   },
@@ -68,6 +70,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4000720240327002",
     "@dcloudio/uni-stacktracey": "3.0.0-4000720240327002",
     "@dcloudio/vite-plugin-uni": "3.0.0-4000720240327002",
+    "@types/crypto-js": "^4.2.2",
     "@vue/runtime-core": "^3.3.11",
     "@vue/tsconfig": "^0.1.3",
     "ng-openapi-gen": "^0.25.1",
