--- a/apps/app-coffee/src/manifest.json
+++ b/apps/app-coffee/src/manifest.json
@@ -60,7 +60,10 @@
         "desc": "是否允许获取你当前的地理位置信息？"
       }
     },
-    "requiredPrivateInfos": ["getLocation"]
+    "requiredPrivateInfos": ["getLocation"],
+    "optimization": {
+      "subPackages": true
+    }
   },
   "mp-alipay": {
     "usingComponents": true
